change in .hgignore again.

--- a/.hgignore
+++ b/.hgignore
@@ -2,7 +2,14 @@ syntax: glob
 oneBody
 *.o
 src/tmp/*
-example/*.out
+example/n.out
 example/mdc.dat
-./*mdc.dat
-./*.out
+./mdc.dat
+./n.out
+*.tar.gz
+
+#for the tar in the release.sh command:
+onebody/mdc.dat
+onebody/n.out
+onebody/example/n.out
+onebody/example/mdc.dat
